--- a/newsletter/css/body.css
+++ b/newsletter/css/body.css
@@ -182,3 +182,7 @@ a:hover, a:focus {
 @media screen and (max-width: 30em) {
 	#lg { width: 230px; } 
 }
+
+form input[type="text"] {
+    text-transform: lowercase;
+}
